--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
       padding-top: 25px;
       padding-bottom: 25px;
       font-weight: lighter;
-      color:  #585757;
+      color: #585757;
   }
 
   .banner-img {
@@ -51,92 +51,201 @@
   .banner-flower {
       width: 550px;
   }
-  .btn-contact{
-    padding-right: 30px;
-    padding-top: 15px;
-}
-.btn-primary{
-    color: white;
-    background-color: #E55473 ;
-    border:0;
-    border-radius: 10px;
-    font-size: 22px;
-    /* height: 80px; */
-    padding: 20px 35px;
-    font-weight: 600;
-}
-.feature{
-    text-align: center;
-    margin-top: 150px;
-}
-.feature-title{
-    color:#2e2d2d;
-    font-weight: 800;
-    padding-bottom: 20px;
-}
-.feature-des{
-    color: #585757;
-    
-}
-.feature-item{
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    
-}
-.feature-img-1{
-    width: 280px;
-    text-align: center;
-    background-color:#f1d8e4 ;
-    padding: 80px 70px 0px 70px;
-    border: 0 ;
-    border-top-right-radius: 700px ;
-    border-top-left-radius: 700px ;
-    margin-top: 90px;
-}
-.feature-img-2{
-    text-align: center;
-    width: 300px;
-    background-color:#cff0f1 ;
-    padding: 118px 70px 50px 70px;
-    border: 0 ;
-    border-top-right-radius: 700px ;
-    border-top-left-radius: 700px ;
-    margin-top: 90px;
-}
-.feature-img-3{
-    text-align: center;
-    width: 270px;
-    background-color:#d1f5de ;
-    padding: 65px 70px 0px 70px;
-    border: 0 ;
-    border-top-right-radius: 700px ;
-    border-top-left-radius: 700px ;
-    margin-top: 90px;
-}
-.feature-text{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: #2e2d2d;
-    margin: 20px;
-    text-decoration: underline;
-}
-.hot-deal{
-    display: flex;
-    background-color: #f1edef;
-    justify-content: center;
-    gap: 250px;
-    margin-top: 120px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-.deal-text{
-    padding-top: 150px;
-    text-align: center;
-}
-.deal-title{
+
+  .btn-contact {
+      padding-right: 30px;
+      padding-top: 15px;
+  }
+
+  .btn-primary {
+      color: white;
+      background-color: #E55473;
+      border: 0;
+      border-radius: 10px;
+      font-size: 20px;
+      /* height: 80px; */
+      padding: 20px 35px;
+      font-weight: 600;
+  }
+
+  .feature {
+      text-align: center;
+      margin-top: 150px;
+  }
+
+  .feature-title {
+      color: #2e2d2d;
+      font-weight: 700;
+      padding-bottom: 20px;
+      font-size: 35px;
+  }
+
+  .feature-des {
+      color: #585757;
+
+  }
+
+  .feature-item {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+
+  }
+
+  .feature-img-1 {
+      width: 280px;
+      text-align: center;
+      background-color: #f1d8e4;
+      padding: 80px 70px 0px 70px;
+      border: 0;
+      border-top-right-radius: 700px;
+      border-top-left-radius: 700px;
+      margin-top: 90px;
+  }
+
+  .feature-img-2 {
+      text-align: center;
+      width: 300px;
+      background-color: #cff0f1;
+      padding: 118px 70px 50px 70px;
+      border: 0;
+      border-top-right-radius: 700px;
+      border-top-left-radius: 700px;
+      margin-top: 90px;
+  }
+
+  .feature-img-3 {
+      text-align: center;
+      width: 270px;
+      background-color: #d1f5de;
+      padding: 65px 70px 0px 70px;
+      border: 0;
+      border-top-right-radius: 700px;
+      border-top-left-radius: 700px;
+      margin-top: 90px;
+  }
+
+  .feature-text {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: #2e2d2d;
+      margin: 20px;
+      text-decoration: underline;
+  }
+
+  .hot-deal {
+      display: flex;
+      background-color: #f1edef;
+      justify-content: center;
+      gap: 250px;
+      margin-top: 120px;
+      padding-top: 120px;
+      padding-bottom: 120px;
+  }
+
+  .deal-text {
+      padding-top: 150px;
+      text-align: center;
+  }
+
+  .deal-title {
+      font-size: 35px;
+      color: #2e2d2d;
+      padding-bottom: 20px;
+  }
+
+  .deal-des {
+      color: #585757;
+      padding-bottom: 15px;
+  }
+
+  .insta {
+      text-align: center;
+      margin-top: 120px;
+  }
+.insta-title{
     font-size: 35px;
     color: #2e2d2d;
+    font-weight: 600;
     padding-bottom: 20px;
 }
+.insta-des{
+    font-size: 14px;
+    color: #585757;
+}
+  .insta-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 50px;
+      margin-bottom: 100px;
+  }
+
+  .sub-sec{
+    background-image: url(images/Rectangle\ 9.png);
+    background-repeat: no-repeat ;
+    margin-left: 240px;
+    margin-right: 200px;
+    height: 500px;
+    width: 1430px;
+    font-weight: bolder;
+    border: 0;
+    border-radius: 20px;
+  }
+ .subscribe-container{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+ }
+ .subs-text{
+    text-align: center;
+    padding-top: 110px;
+    padding-bottom: 40px;
+ }
+ .subs-title{
+    font-size: 40px;
+    font-weight: 600px;
+    color: #2e2d2d;
+    padding-bottom: 15px;
+ }
+ .subs-des{
+    font-weight: lighter;
+    color: #585757;
+ }
+ #input{
+    padding-top: 22px;
+    padding-bottom: 22px;
+    padding-right: 600px;
+    padding-left: 20px;
+    margin-top: 18px;
+    border: 0;
+    border-radius: 10px;
+    color: #585757;
+    font-size: 16px;
+ }
+ .footer{
+    text-align: center;
+    margin-top: 40px;
+    background-color: #181818;
+    padding: 80px
+ }
+ .f-title{
+    font-size: 45px;
+    padding-bottom: 25px;
+    padding-top: 10px;
+    color: white;
+ }
+
+ .f-text{
+    color: rgb(221, 221, 221);
+    padding-bottom: 20px;
+    padding-top: 10px;
+    font-size: 14px;
+ }
+ .f{
+    color: #585757;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    font-size: 12px;
+ }
